changed canteen to restaurant

--- a/manual-feedback.html
+++ b/manual-feedback.html
@@ -281,8 +281,7 @@
                             <option class = 'Admission'>Admission</option>
                             <option class = 'Attendant'>Attendant services</option>
                             <option class = 'Building'>Building and facilities</option>
-                            <option class = 'Cafeteria'>Cafeteria</option>
-                            <option class = 'Canteen'>Canteen</option>
+                            <option class = 'Cafeteria'>Cafeteria</option>                            
                             <option class = 'Care_coordination'>Care coordination</option>
                             <option class = 'Dietary'>Dietary</option>
                             <option class = 'Discharge'>Discharge</option>
@@ -295,6 +294,7 @@
                             <option class = 'Paramedical'>Paramedical services</option>
                             <option class = 'Pharmacy'>Pharmacy</option>
                             <option class = 'Radiology'>Radiology</option>
+                            <option class = 'Restaurant'>Restaurant</option>
                             <option class = 'Security'>Security</option>
                             <option class = 'Others'>Others</option>
                             </select>
@@ -314,11 +314,7 @@
                             <option class = 'Building'>Ventilation and lighting</option>
                             <option class = 'Cafeteria'>Ambience</option>
                             <option class = 'Cafeteria'>Quality and cost</option>
-                            <option class = 'Cafeteria'>Staff behaviour</option>  
-                            <option class = 'Canteen'>Ambience</option>
-                            <option class = 'Canteen'>Quality and cost</option>
-                            <option class = 'Canteen'>Staff behaviour</option>
-                            <option class = 'Canteen'>Waiting time</option>
+                            <option class = 'Cafeteria'>Staff behaviour</option>
                             <option class = 'Care_coordination'>IP CRE</option>
                             <option class = 'Care_coordination'>Supervisors</option>
                             <option class = 'Care_coordination'>Ward secretary</option>
@@ -352,6 +348,10 @@
                             <option class = 'Radiology'>Delay in reporting</option>
                             <option class = 'Radiology'>Investigation delay</option>
                             <option class = 'Radiology'>Staff behaviour</option>
+                            <option class = 'Restaurant'>Ambience</option>
+                            <option class = 'Restaurant'>Quality and cost</option>
+                            <option class = 'Restaurant'>Staff behaviour</option>
+                            <option class = 'Restaurant'>Waiting time</option>
                             <option class = 'Security'>Staff behaviour</option>
                             <option class = 'Others'>General</option>
                             <option class = 'Others'>Hospital Management</option>
@@ -387,7 +387,6 @@
                                     <option class = 'Attendant'>Attendant services</option>
                                     <option class = 'Building'>Building and facilities</option>
                                     <option class = 'Cafeteria'>Cafeteria</option>
-                                    <option class = 'Canteen'>Canteen</option>
                                     <option class = 'Care_coordination'>Care coordination</option>
                                     <option class = 'Dietary'>Dietary</option>
                                     <option class = 'Discharge'>Discharge</option>
@@ -400,6 +399,7 @@
                                     <option class = 'Paramedical'>Paramedical services</option>
                                     <option class = 'Pharmacy'>Pharmacy</option>
                                     <option class = 'Radiology'>Radiology</option>
+                                    <option class = 'Restaurant'>Restaurant</option>
                                     <option class = 'Security'>Security</option>
                                     <option class = 'Others'>Others</option>
                             </select>
@@ -419,11 +419,7 @@
                                     <option class = 'Building'>Ventilation and lighting</option>
                                     <option class = 'Cafeteria'>Ambience</option>
                                     <option class = 'Cafeteria'>Quality and cost</option>
-                                    <option class = 'Cafeteria'>Staff behaviour</option>  
-                                    <option class = 'Canteen'>Ambience</option>
-                                    <option class = 'Canteen'>Quality and cost</option>
-                                    <option class = 'Canteen'>Staff behaviour</option>
-                                    <option class = 'Canteen'>Waiting time</option>
+                                    <option class = 'Cafeteria'>Staff behaviour</option>
                                     <option class = 'Care_coordination'>IP CRE</option>
                                     <option class = 'Care_coordination'>Supervisors</option>
                                     <option class = 'Care_coordination'>Ward secretary</option>
@@ -457,6 +453,10 @@
                                     <option class = 'Radiology'>Delay in reporting</option>
                                     <option class = 'Radiology'>Investigation delay</option>
                                     <option class = 'Radiology'>Staff behaviour</option>
+                                    <option class = 'Restaurant'>Ambience</option>
+                                    <option class = 'Restaurant'>Quality and cost</option>
+                                    <option class = 'Restaurant'>Staff behaviour</option>
+                                    <option class = 'Restaurant'>Waiting time</option>
                                     <option class = 'Security'>Staff behaviour</option>
                                     <option class = 'Others'>General</option>
                                     <option class = 'Others'>Hospital Management</option>
@@ -492,7 +492,6 @@
                                     <option class = 'Attendant'>Attendant services</option>
                                     <option class = 'Building'>Building and facilities</option>
                                     <option class = 'Cafeteria'>Cafeteria</option>
-                                    <option class = 'Canteen'>Canteen</option>
                                     <option class = 'Care_coordination'>Care coordination</option>
                                     <option class = 'Dietary'>Dietary</option>
                                     <option class = 'Discharge'>Discharge</option>
@@ -505,6 +504,7 @@
                                     <option class = 'Paramedical'>Paramedical services</option>
                                     <option class = 'Pharmacy'>Pharmacy</option>
                                     <option class = 'Radiology'>Radiology</option>
+                                    <option class = 'Restaurant'>Restaurant</option>
                                     <option class = 'Security'>Security</option>
                                     <option class = 'Others'>Others</option>
                             </select>
@@ -524,11 +524,7 @@
                                     <option class = 'Building'>Ventilation and lighting</option>
                                     <option class = 'Cafeteria'>Ambience</option>
                                     <option class = 'Cafeteria'>Quality and cost</option>
-                                    <option class = 'Cafeteria'>Staff behaviour</option>  
-                                    <option class = 'Canteen'>Ambience</option>
-                                    <option class = 'Canteen'>Quality and cost</option>
-                                    <option class = 'Canteen'>Staff behaviour</option>
-                                    <option class = 'Canteen'>Waiting time</option>
+                                    <option class = 'Cafeteria'>Staff behaviour</option>
                                     <option class = 'Care_coordination'>IP CRE</option>
                                     <option class = 'Care_coordination'>Supervisors</option>
                                     <option class = 'Care_coordination'>Ward secretary</option>
@@ -562,6 +558,10 @@
                                     <option class = 'Radiology'>Delay in reporting</option>
                                     <option class = 'Radiology'>Investigation delay</option>
                                     <option class = 'Radiology'>Staff behaviour</option>
+                                    <option class = 'Restaurant'>Ambience</option>
+                                    <option class = 'Restaurant'>Quality and cost</option>
+                                    <option class = 'Restaurant'>Staff behaviour</option>
+                                    <option class = 'Restaurant'>Waiting time</option>
                                     <option class = 'Security'>Staff behaviour</option>
                                     <option class = 'Others'>General</option>
                                     <option class = 'Others'>Hospital Management</option>
