--- a/feedback.html
+++ b/feedback.html
@@ -260,8 +260,7 @@
                             <option class = 'Admission'>Admission</option>
                             <option class = 'Attendant'>Attendant services</option>
                             <option class = 'Building'>Building and facilities</option>
-                            <option class = 'Cafeteria'>Cafeteria</option>
-                            <option class = 'Canteen'>Canteen</option>
+                            <option class = 'Cafeteria'>Cafeteria</option>                            
                             <option class = 'Care_coordination'>Care coordination</option>
                             <option class = 'Dietary'>Dietary</option>
                             <option class = 'Discharge'>Discharge</option>
@@ -274,6 +273,7 @@
                             <option class = 'Paramedical'>Paramedical services</option>
                             <option class = 'Pharmacy'>Pharmacy</option>
                             <option class = 'Radiology'>Radiology</option>
+                            <option class = 'Restaurant'>Restaurant</option>
                             <option class = 'Security'>Security</option>
                             <option class = 'Others'>Others</option>
                             </select>
@@ -293,11 +293,7 @@
                             <option class = 'Building'>Ventilation and lighting</option>
                             <option class = 'Cafeteria'>Ambience</option>
                             <option class = 'Cafeteria'>Quality and cost</option>
-                            <option class = 'Cafeteria'>Staff behaviour</option>  
-                            <option class = 'Canteen'>Ambience</option>
-                            <option class = 'Canteen'>Quality and cost</option>
-                            <option class = 'Canteen'>Staff behaviour</option>
-                            <option class = 'Canteen'>Waiting time</option>
+                            <option class = 'Cafeteria'>Staff behaviour</option>
                             <option class = 'Care_coordination'>IP CRE</option>
                             <option class = 'Care_coordination'>Supervisors</option>
                             <option class = 'Care_coordination'>Ward secretary</option>
@@ -331,6 +327,10 @@
                             <option class = 'Radiology'>Delay in reporting</option>
                             <option class = 'Radiology'>Investigation delay</option>
                             <option class = 'Radiology'>Staff behaviour</option>
+                            <option class = 'Restaurant'>Ambience</option>
+                            <option class = 'Restaurant'>Quality and cost</option>
+                            <option class = 'Restaurant'>Staff behaviour</option>
+                            <option class = 'Restaurant'>Waiting time</option>
                             <option class = 'Security'>Staff behaviour</option>
                             <option class = 'Others'>General</option>
                             <option class = 'Others'>Hospital Management</option>
@@ -366,7 +366,6 @@
                                     <option class = 'Attendant'>Attendant services</option>
                                     <option class = 'Building'>Building and facilities</option>
                                     <option class = 'Cafeteria'>Cafeteria</option>
-                                    <option class = 'Canteen'>Canteen</option>
                                     <option class = 'Care_coordination'>Care coordination</option>
                                     <option class = 'Dietary'>Dietary</option>
                                     <option class = 'Discharge'>Discharge</option>
@@ -379,6 +378,7 @@
                                     <option class = 'Paramedical'>Paramedical services</option>
                                     <option class = 'Pharmacy'>Pharmacy</option>
                                     <option class = 'Radiology'>Radiology</option>
+                                    <option class = 'Restaurant'>Restaurant</option>
                                     <option class = 'Security'>Security</option>
                                     <option class = 'Others'>Others</option>
                             </select>
@@ -398,11 +398,7 @@
                                     <option class = 'Building'>Ventilation and lighting</option>
                                     <option class = 'Cafeteria'>Ambience</option>
                                     <option class = 'Cafeteria'>Quality and cost</option>
-                                    <option class = 'Cafeteria'>Staff behaviour</option>  
-                                    <option class = 'Canteen'>Ambience</option>
-                                    <option class = 'Canteen'>Quality and cost</option>
-                                    <option class = 'Canteen'>Staff behaviour</option>
-                                    <option class = 'Canteen'>Waiting time</option>
+                                    <option class = 'Cafeteria'>Staff behaviour</option>
                                     <option class = 'Care_coordination'>IP CRE</option>
                                     <option class = 'Care_coordination'>Supervisors</option>
                                     <option class = 'Care_coordination'>Ward secretary</option>
@@ -436,6 +432,10 @@
                                     <option class = 'Radiology'>Delay in reporting</option>
                                     <option class = 'Radiology'>Investigation delay</option>
                                     <option class = 'Radiology'>Staff behaviour</option>
+                                    <option class = 'Restaurant'>Ambience</option>
+                                    <option class = 'Restaurant'>Quality and cost</option>
+                                    <option class = 'Restaurant'>Staff behaviour</option>
+                                    <option class = 'Restaurant'>Waiting time</option>
                                     <option class = 'Security'>Staff behaviour</option>
                                     <option class = 'Others'>General</option>
                                     <option class = 'Others'>Hospital Management</option>
@@ -471,7 +471,6 @@
                                     <option class = 'Attendant'>Attendant services</option>
                                     <option class = 'Building'>Building and facilities</option>
                                     <option class = 'Cafeteria'>Cafeteria</option>
-                                    <option class = 'Canteen'>Canteen</option>
                                     <option class = 'Care_coordination'>Care coordination</option>
                                     <option class = 'Dietary'>Dietary</option>
                                     <option class = 'Discharge'>Discharge</option>
@@ -484,6 +483,7 @@
                                     <option class = 'Paramedical'>Paramedical services</option>
                                     <option class = 'Pharmacy'>Pharmacy</option>
                                     <option class = 'Radiology'>Radiology</option>
+                                    <option class = 'Restaurant'>Restaurant</option>
                                     <option class = 'Security'>Security</option>
                                     <option class = 'Others'>Others</option>
                             </select>
@@ -503,11 +503,7 @@
                                     <option class = 'Building'>Ventilation and lighting</option>
                                     <option class = 'Cafeteria'>Ambience</option>
                                     <option class = 'Cafeteria'>Quality and cost</option>
-                                    <option class = 'Cafeteria'>Staff behaviour</option>  
-                                    <option class = 'Canteen'>Ambience</option>
-                                    <option class = 'Canteen'>Quality and cost</option>
-                                    <option class = 'Canteen'>Staff behaviour</option>
-                                    <option class = 'Canteen'>Waiting time</option>
+                                    <option class = 'Cafeteria'>Staff behaviour</option>
                                     <option class = 'Care_coordination'>IP CRE</option>
                                     <option class = 'Care_coordination'>Supervisors</option>
                                     <option class = 'Care_coordination'>Ward secretary</option>
@@ -541,6 +537,10 @@
                                     <option class = 'Radiology'>Delay in reporting</option>
                                     <option class = 'Radiology'>Investigation delay</option>
                                     <option class = 'Radiology'>Staff behaviour</option>
+                                    <option class = 'Restaurant'>Ambience</option>
+                                    <option class = 'Restaurant'>Quality and cost</option>
+                                    <option class = 'Restaurant'>Staff behaviour</option>
+                                    <option class = 'Restaurant'>Waiting time</option>
                                     <option class = 'Security'>Staff behaviour</option>
                                     <option class = 'Others'>General</option>
                                     <option class = 'Others'>Hospital Management</option>
