--- a/feedback.html
+++ b/feedback.html
@@ -248,9 +248,9 @@
                             <label for="type1" class = 'bmh-orange-txt font-weight-bold'>Feedback Type</label>
                             <select class="form-control" id="type1" name="type1">
                             <option class = 'Select-type'>Select Feedback Type</option>
-                            <option>Compliment</option>
-                            <option>Complaint</option>
+                            <option>Compliment</option>                            
                             <option>Suggestion</option>
+                            <option>Complaint</option>
                             </select>
                         </div>
                         <div class="form-group">
@@ -353,9 +353,9 @@
                             <label for="type2" class = 'bmh-orange-txt font-weight-bold'>Feedback Type</label>
                             <select class="form-control" id="type2" name="type2">
                             <option class = 'Select-type'>Select Feedback Type</option>
-                            <option>Compliment</option>
-                            <option>Complaint</option>
+                            <option>Compliment</option>                            
                             <option>Suggestion</option>
+                            <option>Complaint</option>
                             </select>
                         </div>
                         <div class="form-group">
@@ -458,9 +458,9 @@
                             <label for="type3" class = 'bmh-orange-txt font-weight-bold'>Feedback Type</label>
                             <select class="form-control" id="type3" name="type3">
                             <option class = 'Select-type'>Select Feedback Type</option>
-                            <option>Compliment</option>
-                            <option>Complaint</option>
+                            <option>Compliment</option>                            
                             <option>Suggestion</option>
+                            <option>Complaint</option>
                             </select>
                         </div>
                         <div class="form-group">
@@ -649,23 +649,23 @@
 
         //Get patient details from URL parameters (using /)
             var params = location.href.replace(/%20&%20/g, " AND ").replace(/-/g, " ").split("?")[1]; //To correct issue with '&' in OBG
-            var submitter = params.split('/')[0].replace(/%20/g, " ");
+            var submitter = params.split('|')[0].replace(/%20/g, " ");
             console.log(submitter);
-            var name = params.split('/')[1].replace(/%20/g, " ");
+            var name = params.split('|')[1].replace(/%20/g, " ");
             console.log(name);
-            var uhid = params.split('/')[2];
+            var uhid = params.split('|')[2];
             console.log(uhid);
-            var ward = params.split('/')[3];
+            var ward = params.split('|')[3];
             console.log(ward);
-            var room = params.split('/')[4];
+            var room = params.split('|')[4];
             console.log(room);
-            var doctor = params.split('/')[5].replace(/%20/g, " ");
+            var doctor = params.split('|')[5].replace(/%20/g, " ");
             console.log(doctor);
-            var department = params.split('/')[6].replace(/%20/g, " ");
+            var department = params.split('|')[6].replace(/%20/g, " ");
             console.log(department);
-            var mobile = params.split('/')[7];
+            var mobile = params.split('|')[7];
             console.log(mobile);
-            var admNo = params.split('/')[8];
+            var admNo = params.split('|')[8];
             console.log(admNo);
             // var link = params.split('/')[9];            
             var link = window.location.href.replace(/%20/g, "-");
