--- a/feedback.html
+++ b/feedback.html
@@ -222,7 +222,7 @@
                     </div>                    
                 </div>                    
                     <div class="form-group" id = "nps">
-                            <p class='text-justify bmh-blue-txt font-weight-bold'>Based on your recent experience at BMH, how likely are you to recommend us to a relative or a friend?</p>
+                        <p class='text-justify bmh-blue-txt font-weight-bold'>Based on your recent experience at BMH, how likely are you to recommend us to a relative or a friend?</p>
                         <label class="nps-btn red poor"><input type="radio" name="rating" value = "1"><span>1</span></label>
                         <label class="nps-btn red poor"><input type="radio" name="rating" value = "2"><span>2</span></label>
                         <label class="nps-btn orange poor"><input type="radio" name="rating" value = "3"><span>3</span></label>
@@ -769,6 +769,8 @@
                 Please share your experience with us by clicking on the <strong>'Add Feedback'</strong> button below.<em></p>");
                 $("#notification").fadeIn();
                 $('html, body').animate({scrollTop:$(document).height()}, 'slow');
+                //enable submit button
+                $("#submit").prop('disabled',false);
             });
         });
 
@@ -778,6 +780,8 @@
                 Please let us know how we can provide a delightful experience by clicking on the <strong>'Add Feedback'</strong> button below.<em></p>");
                 $("#notification").fadeIn();
                 $('html, body').animate({scrollTop:$(document).height()}, 'slow');
+                //enable submit button
+                $("#submit").prop('disabled',false);
             });
         });
 
@@ -791,6 +795,8 @@
                 //$('#modal-heading').html(heading);
                 $('#modal-text-poor-feedback').html(message_poor);                
                 $('#poor-feedback').modal('show');
+                //enable submit button
+                $("#submit").prop('disabled',false);
                 
             });
         });
