--- a/feedback.html
+++ b/feedback.html
@@ -551,7 +551,7 @@
                             <textarea rows = "5" type="text" class="form-control" id="comments" name="description3"></textarea>
                         </div>   
                     </div>
-                    <button type="submit" class="btn bmh-blue-bg btn-block">Submit</button>
+                    <button type="submit" id='submit' class="btn bmh-blue-bg btn-block" disabled>Submit</button>
             </form>
 
         <!-- Submission confirmation modal -->
