display of mobile number in front end as editable field

--- a/feedback.html
+++ b/feedback.html
@@ -202,7 +202,8 @@
                       <label for="uhid" class = 'bmh-blue-txt font-weight-bold'>UHID</label>
                       <input type="text" class="form-control" id="uhid" name="uhid" readonly>                      
                     </div>
-                    <div class="form-group d-none">  
+                    <div class="form-group col-xs-12 col-sm-12 col-md-6 col-lg-6">  
+                        <label for="mobile" class = 'bmh-blue-txt font-weight-bold'>Mobile</label>
                         <input type="text" class="form-control" id="mobile" name="mobile">                      
                     </div>
                     <div class="form-group d-none">  
