--- a/feedback.html
+++ b/feedback.html
@@ -204,7 +204,7 @@
                     </div>
                     <div class="form-group col-xs-12 col-sm-12 col-md-6 col-lg-6">  
                         <label for="mobile" class = 'bmh-blue-txt font-weight-bold'>Mobile</label>
-                        <input type="text" class="form-control" id="mobile" name="mobile">                      
+                        <input type="text" class="form-control" id="mobile" name="mobile" required>                      
                     </div>
                     <div class="form-group d-none">  
                         <input type="text" class="form-control" id="admNo" name="admNo">                      
