--- a/close.html
+++ b/close.html
@@ -269,6 +269,7 @@
                                         <option class = 'Discharge'>Discharge</option>
                                         <option class = 'Doctors'>Doctors</option>
                                         <option class = 'ED'>ED</option>
+                                        <option class = 'EEG/ENMG/Echo'>ED</option>
                                         <option class = 'Housekeeping'>Housekeeping</option>
                                         <option class = 'Insurance'>Insurance desk</option>
                                         <option class = 'Lab'>Lab</option>
@@ -314,6 +315,8 @@
                                         <option class = 'ED'>Care and concern</option>
                                         <option class = 'ED'>Communication</option>
                                         <option class = 'ED'>Delay in services</option>
+                                        <option class = 'EEG/ENMG/Echo'>Delay in services</option>
+                                        <option class = 'EEG/ENMG/Echo'>Staff behaviour</option>
                                         <option class = 'Housekeeping'>Room cleanliness</option>
                                         <option class = 'Housekeeping'>Staff behaviour</option>
                                         <option class = 'Housekeeping'>Timely services</option>
@@ -336,6 +339,7 @@
                                         <option class = 'Security'>Staff behaviour</option>
                                         <option class = 'Others'>General</option>
                                         <option class = 'Others'>Hospital Management</option>
+                                        <option class = 'Others'>Birth & Death registration</option>
                                 </select>
                             </div>
                         </div>
