--- a/manual-feedback.html
+++ b/manual-feedback.html
@@ -287,6 +287,7 @@
                             <option class = 'Discharge'>Discharge</option>
                             <option class = 'Doctors'>Doctors</option>
                             <option class = 'ED'>ED</option>
+                            <option class = 'EEG/ENMG/Echo'>EEG/ENMG/Echo</option>
                             <option class = 'Housekeeping'>Housekeeping</option>
                             <option class = 'Insurance'>Insurance desk</option>
                             <option class = 'Lab'>Lab</option>
@@ -329,6 +330,8 @@
                             <option class = 'ED'>Care and concern</option>
                             <option class = 'ED'>Communication</option>
                             <option class = 'ED'>Delay in services</option>
+                            <option class = 'EEG/ENMG/Echo'>Delay in services</option>
+                            <option class = 'EEG/ENMG/Echo'>Staff behaviour</option>
                             <option class = 'Housekeeping'>Room cleanliness</option>
                             <option class = 'Housekeeping'>Staff behaviour</option>
                             <option class = 'Housekeeping'>Timely services</option>
@@ -355,6 +358,7 @@
                             <option class = 'Security'>Staff behaviour</option>
                             <option class = 'Others'>General</option>
                             <option class = 'Others'>Hospital Management</option>
+                            <option class = 'Others'>Birth & Death registration</option>
                             </select>
                         </div>
                         <div class="form-group">
@@ -392,6 +396,7 @@
                                     <option class = 'Discharge'>Discharge</option>
                                     <option class = 'Doctors'>Doctors</option>
                                     <option class = 'ED'>ED</option>
+                                    <option class = 'EEG/ENMG/Echo'>EEG/ENMG/Echo</option>
                                     <option class = 'Housekeeping'>Housekeeping</option>
                                     <option class = 'Insurance'>Insurance desk</option>
                                     <option class = 'Lab'>Lab</option>
@@ -434,6 +439,8 @@
                                     <option class = 'ED'>Care and concern</option>
                                     <option class = 'ED'>Communication</option>
                                     <option class = 'ED'>Delay in services</option>
+                                    <option class = 'EEG/ENMG/Echo'>Delay in services</option>
+                                    <option class = 'EEG/ENMG/Echo'>Staff behaviour</option>
                                     <option class = 'Housekeeping'>Room cleanliness</option>
                                     <option class = 'Housekeeping'>Staff behaviour</option>
                                     <option class = 'Housekeeping'>Timely services</option>
@@ -460,6 +467,7 @@
                                     <option class = 'Security'>Staff behaviour</option>
                                     <option class = 'Others'>General</option>
                                     <option class = 'Others'>Hospital Management</option>
+                                    <option class = 'Others'>Birth & Death registration</option>
                             </select>
                         </div>
                         <div class="form-group">
@@ -497,6 +505,7 @@
                                     <option class = 'Discharge'>Discharge</option>
                                     <option class = 'Doctors'>Doctors</option>
                                     <option class = 'ED'>ED</option>
+                                    <option class = 'EEG/ENMG/Echo'>EEG/ENMG/Echo</option>
                                     <option class = 'Housekeeping'>Housekeeping</option>
                                     <option class = 'Insurance'>Insurance desk</option>
                                     <option class = 'Lab'>Lab</option>
@@ -539,6 +548,8 @@
                                     <option class = 'ED'>Care and concern</option>
                                     <option class = 'ED'>Communication</option>
                                     <option class = 'ED'>Delay in services</option>
+                                    <option class = 'EEG/ENMG/Echo'>Delay in services</option>
+                                    <option class = 'EEG/ENMG/Echo'>Staff behaviour</option>
                                     <option class = 'Housekeeping'>Room cleanliness</option>
                                     <option class = 'Housekeeping'>Staff behaviour</option>
                                     <option class = 'Housekeeping'>Timely services</option>
@@ -565,6 +576,7 @@
                                     <option class = 'Security'>Staff behaviour</option>
                                     <option class = 'Others'>General</option>
                                     <option class = 'Others'>Hospital Management</option>
+                                    <option class = 'Others'>Birth & Death registration</option>
                             </select>
                         </div>
                         <div class="form-group">
