--- a/feedback.html
+++ b/feedback.html
@@ -267,6 +267,7 @@
                             <option class = 'Discharge'>Discharge</option>
                             <option class = 'Doctors'>Doctors</option>
                             <option class = 'ED'>ED</option>
+                            <option class = 'EEG/ENMG/Echo'>EEG/ENMG/Echo</option>
                             <option class = 'Housekeeping'>Housekeeping</option>
                             <option class = 'Insurance'>Insurance desk</option>
                             <option class = 'Lab'>Lab</option>
@@ -309,6 +310,8 @@
                             <option class = 'ED'>Care and concern</option>
                             <option class = 'ED'>Communication</option>
                             <option class = 'ED'>Delay in services</option>
+                            <option class = 'EEG/ENMG/Echo'>Delay in services</option>
+                            <option class = 'EEG/ENMG/Echo'>Staff behaviour</option>
                             <option class = 'Housekeeping'>Room cleanliness</option>
                             <option class = 'Housekeeping'>Staff behaviour</option>
                             <option class = 'Housekeeping'>Timely services</option>
@@ -335,6 +338,7 @@
                             <option class = 'Security'>Staff behaviour</option>
                             <option class = 'Others'>General</option>
                             <option class = 'Others'>Hospital Management</option>
+                            <option class = 'Others'>Birth & Death registration</option>
                             </select>
                         </div>
                         <div class="form-group">
@@ -372,6 +376,7 @@
                                     <option class = 'Discharge'>Discharge</option>
                                     <option class = 'Doctors'>Doctors</option>
                                     <option class = 'ED'>ED</option>
+                                    <option class = 'EEG/ENMG/Echo'>EEG/ENMG/Echo</option>
                                     <option class = 'Housekeeping'>Housekeeping</option>
                                     <option class = 'Insurance'>Insurance desk</option>
                                     <option class = 'Lab'>Lab</option>
@@ -414,6 +419,8 @@
                                     <option class = 'ED'>Care and concern</option>
                                     <option class = 'ED'>Communication</option>
                                     <option class = 'ED'>Delay in services</option>
+                                    <option class = 'EEG/ENMG/Echo'>Delay in services</option>
+                                    <option class = 'EEG/ENMG/Echo'>Staff behaviour</option>
                                     <option class = 'Housekeeping'>Room cleanliness</option>
                                     <option class = 'Housekeeping'>Staff behaviour</option>
                                     <option class = 'Housekeeping'>Timely services</option>
@@ -440,6 +447,7 @@
                                     <option class = 'Security'>Staff behaviour</option>
                                     <option class = 'Others'>General</option>
                                     <option class = 'Others'>Hospital Management</option>
+                                    <option class = 'Others'>Birth & Death registration</option>
                             </select>
                         </div>
                         <div class="form-group">
@@ -477,6 +485,7 @@
                                     <option class = 'Discharge'>Discharge</option>
                                     <option class = 'Doctors'>Doctors</option>
                                     <option class = 'ED'>ED</option>
+                                    <option class = 'EEG/ENMG/Echo'>EEG/ENMG/Echo</option>
                                     <option class = 'Housekeeping'>Housekeeping</option>
                                     <option class = 'Insurance'>Insurance desk</option>
                                     <option class = 'Lab'>Lab</option>
@@ -519,6 +528,8 @@
                                     <option class = 'ED'>Care and concern</option>
                                     <option class = 'ED'>Communication</option>
                                     <option class = 'ED'>Delay in services</option>
+                                    <option class = 'EEG/ENMG/Echo'>Delay in services</option>
+                                    <option class = 'EEG/ENMG/Echo'>Staff behaviour</option>
                                     <option class = 'Housekeeping'>Room cleanliness</option>
                                     <option class = 'Housekeeping'>Staff behaviour</option>
                                     <option class = 'Housekeeping'>Timely services</option>
@@ -545,6 +556,7 @@
                                     <option class = 'Security'>Staff behaviour</option>
                                     <option class = 'Others'>General</option>
                                     <option class = 'Others'>Hospital Management</option>
+                                    <option class = 'Others'>Birth & Death registration</option>
                             </select>
                         </div>
                         <div class="form-group">
