--- a/close.html
+++ b/close.html
@@ -269,7 +269,7 @@
                                         <option class = 'Discharge'>Discharge</option>
                                         <option class = 'Doctors'>Doctors</option>
                                         <option class = 'ED'>ED</option>
-                                        <option class = 'EEG/ENMG/Echo'>ED</option>
+                                        <option class = 'EEG/ENMG/Echo'>EEG/ENMG/Echo</option>
                                         <option class = 'Housekeeping'>Housekeeping</option>
                                         <option class = 'Insurance'>Insurance desk</option>
                                         <option class = 'Lab'>Lab</option>
