--- a/feedback.html
+++ b/feedback.html
@@ -267,7 +267,7 @@
                             <option class = 'Discharge'>Discharge</option>
                             <option class = 'Doctors'>Doctors</option>
                             <option class = 'ED'>ED</option>
-                            <option class = 'EEG/ENMG/Echo'>EEG/ENMG/Echo</option>
+                            <option class = 'EEG, ENMG, Echo'>EEG, ENMG, Echo</option>
                             <option class = 'Housekeeping'>Housekeeping</option>
                             <option class = 'Insurance'>Insurance desk</option>
                             <option class = 'Lab'>Lab</option>
@@ -310,8 +310,8 @@
                             <option class = 'ED'>Care and concern</option>
                             <option class = 'ED'>Communication</option>
                             <option class = 'ED'>Delay in services</option>
-                            <option class = 'EEG/ENMG/Echo'>Delay in services</option>
-                            <option class = 'EEG/ENMG/Echo'>Staff behaviour</option>
+                            <option class = 'EEG, ENMG, Echo'>Delay in services</option>
+                            <option class = 'EEG, ENMG, Echo'>Staff behaviour</option>
                             <option class = 'Housekeeping'>Room cleanliness</option>
                             <option class = 'Housekeeping'>Staff behaviour</option>
                             <option class = 'Housekeeping'>Timely services</option>
@@ -376,7 +376,7 @@
                                     <option class = 'Discharge'>Discharge</option>
                                     <option class = 'Doctors'>Doctors</option>
                                     <option class = 'ED'>ED</option>
-                                    <option class = 'EEG/ENMG/Echo'>EEG/ENMG/Echo</option>
+                                    <option class = 'EEG, ENMG, Echo'>EEG, ENMG, Echo</option>
                                     <option class = 'Housekeeping'>Housekeeping</option>
                                     <option class = 'Insurance'>Insurance desk</option>
                                     <option class = 'Lab'>Lab</option>
@@ -419,8 +419,8 @@
                                     <option class = 'ED'>Care and concern</option>
                                     <option class = 'ED'>Communication</option>
                                     <option class = 'ED'>Delay in services</option>
-                                    <option class = 'EEG/ENMG/Echo'>Delay in services</option>
-                                    <option class = 'EEG/ENMG/Echo'>Staff behaviour</option>
+                                    <option class = 'EEG, ENMG, Echo'>Delay in services</option>
+                                    <option class = 'EEG, ENMG, Echo'>Staff behaviour</option>
                                     <option class = 'Housekeeping'>Room cleanliness</option>
                                     <option class = 'Housekeeping'>Staff behaviour</option>
                                     <option class = 'Housekeeping'>Timely services</option>
@@ -485,7 +485,7 @@
                                     <option class = 'Discharge'>Discharge</option>
                                     <option class = 'Doctors'>Doctors</option>
                                     <option class = 'ED'>ED</option>
-                                    <option class = 'EEG/ENMG/Echo'>EEG/ENMG/Echo</option>
+                                    <option class = 'EEG, ENMG, Echo'>EEG, ENMG, Echo</option>
                                     <option class = 'Housekeeping'>Housekeeping</option>
                                     <option class = 'Insurance'>Insurance desk</option>
                                     <option class = 'Lab'>Lab</option>
@@ -528,8 +528,8 @@
                                     <option class = 'ED'>Care and concern</option>
                                     <option class = 'ED'>Communication</option>
                                     <option class = 'ED'>Delay in services</option>
-                                    <option class = 'EEG/ENMG/Echo'>Delay in services</option>
-                                    <option class = 'EEG/ENMG/Echo'>Staff behaviour</option>
+                                    <option class = 'EEG, ENMG, Echo'>Delay in services</option>
+                                    <option class = 'EEG, ENMG, Echo'>Staff behaviour</option>
                                     <option class = 'Housekeeping'>Room cleanliness</option>
                                     <option class = 'Housekeeping'>Staff behaviour</option>
                                     <option class = 'Housekeeping'>Timely services</option>
