--- a/close.html
+++ b/close.html
@@ -269,7 +269,7 @@
                                         <option class = 'Discharge'>Discharge</option>
                                         <option class = 'Doctors'>Doctors</option>
                                         <option class = 'ED'>ED</option>
-                                        <option class = 'EEG/ENMG/Echo'>EEG/ENMG/Echo</option>
+                                        <option class = 'EEG, ENMG, Echo'>EEG, ENMG, Echo</option>
                                         <option class = 'Housekeeping'>Housekeeping</option>
                                         <option class = 'Insurance'>Insurance desk</option>
                                         <option class = 'Lab'>Lab</option>
@@ -315,8 +315,8 @@
                                         <option class = 'ED'>Care and concern</option>
                                         <option class = 'ED'>Communication</option>
                                         <option class = 'ED'>Delay in services</option>
-                                        <option class = 'EEG/ENMG/Echo'>Delay in services</option>
-                                        <option class = 'EEG/ENMG/Echo'>Staff behaviour</option>
+                                        <option class = 'EEG, ENMG, Echo'>Delay in services</option>
+                                        <option class = 'EEG, ENMG, Echo'>Staff behaviour</option>
                                         <option class = 'Housekeeping'>Room cleanliness</option>
                                         <option class = 'Housekeeping'>Staff behaviour</option>
                                         <option class = 'Housekeeping'>Timely services</option>
