esi, echs, eeg, enmg, echo

--- a/manual-feedback.html
+++ b/manual-feedback.html
@@ -287,7 +287,7 @@
                             <option class = 'Discharge'>Discharge</option>
                             <option class = 'Doctors'>Doctors</option>
                             <option class = 'ED'>ED</option>
-                            <option class = 'EEG, ENMG, Echo'>EEG, ENMG, Echo</option>
+                            <option class = 'ESI-ECHS'>ESI-ECHS</option>
                             <option class = 'Housekeeping'>Housekeeping</option>
                             <option class = 'Insurance'>Insurance desk</option>
                             <option class = 'Lab'>Lab</option>
@@ -330,8 +330,8 @@
                             <option class = 'ED'>Care and concern</option>
                             <option class = 'ED'>Communication</option>
                             <option class = 'ED'>Delay in services</option>
-                            <option class = 'EEG, ENMG, Echo'>Delay in services</option>
-                            <option class = 'EEG, ENMG, Echo'>Staff behaviour</option>
+                            <option class = 'ESI-ECHS'>Delay in services</option>
+                            <option class = 'ESI-ECHS'>Staff behaviour</option>
                             <option class = 'Housekeeping'>Room cleanliness</option>
                             <option class = 'Housekeeping'>Staff behaviour</option>
                             <option class = 'Housekeeping'>Timely services</option>
@@ -345,6 +345,7 @@
                             <option class = 'Paramedical'>Nutrition and dietetics</option>
                             <option class = 'Paramedical'>Physiotherapy</option>
                             <option class = 'Paramedical'>Speech therapy and audiology</option>
+                            <option class = 'Paramedical'>EEG / ENMG / Echo</option>
                             <option class = 'Pharmacy'>Delay in services</option>
                             <option class = 'Pharmacy'>Medicine availability</option>
                             <option class = 'Pharmacy'>Staff behaviour</option>
@@ -358,7 +359,7 @@
                             <option class = 'Security'>Staff behaviour</option>
                             <option class = 'Others'>General</option>
                             <option class = 'Others'>Hospital Management</option>
-                            <option class = 'Others'>Birth & Death registration</option>
+                            <option class = 'Others'>Birth & Death registration</option>                            
                             </select>
                         </div>
                         <div class="form-group">
@@ -378,9 +379,9 @@
                             <label for="type2" class = 'bmh-orange-txt font-weight-bold'>Feedback Type</label>
                             <select class="form-control" id="type2" name="type2">
                             <option class = 'Select-type'>Select Feedback Type</option>
-                            <option>Compliment</option>
-                            <option>Complaint</option>
+                            <option>Compliment</option>                            
                             <option>Suggestion</option>
+                            <option>Complaint</option>
                             </select>
                         </div>
                         <div class="form-group">
@@ -396,7 +397,7 @@
                                     <option class = 'Discharge'>Discharge</option>
                                     <option class = 'Doctors'>Doctors</option>
                                     <option class = 'ED'>ED</option>
-                                    <option class = 'EEG, ENMG, Echo'>EEG, ENMG, Echo</option>
+                                    <option class = 'ESI-ECHS'>ESI-ECHS</option>
                                     <option class = 'Housekeeping'>Housekeeping</option>
                                     <option class = 'Insurance'>Insurance desk</option>
                                     <option class = 'Lab'>Lab</option>
@@ -439,8 +440,8 @@
                                     <option class = 'ED'>Care and concern</option>
                                     <option class = 'ED'>Communication</option>
                                     <option class = 'ED'>Delay in services</option>
-                                    <option class = 'EEG, ENMG, Echo'>Delay in services</option>
-                                    <option class = 'EEG, ENMG, Echo'>Staff behaviour</option>
+                                    <option class = 'ESI-ECHS'>Delay in services</option>
+                                    <option class = 'ESI-ECHS'>Staff behaviour</option>
                                     <option class = 'Housekeeping'>Room cleanliness</option>
                                     <option class = 'Housekeeping'>Staff behaviour</option>
                                     <option class = 'Housekeeping'>Timely services</option>
@@ -454,6 +455,7 @@
                                     <option class = 'Paramedical'>Nutrition and dietetics</option>
                                     <option class = 'Paramedical'>Physiotherapy</option>
                                     <option class = 'Paramedical'>Speech therapy and audiology</option>
+                                    <option class = 'Paramedical'>EEG / ENMG / Echo</option>
                                     <option class = 'Pharmacy'>Delay in services</option>
                                     <option class = 'Pharmacy'>Medicine availability</option>
                                     <option class = 'Pharmacy'>Staff behaviour</option>
@@ -467,7 +469,7 @@
                                     <option class = 'Security'>Staff behaviour</option>
                                     <option class = 'Others'>General</option>
                                     <option class = 'Others'>Hospital Management</option>
-                                    <option class = 'Others'>Birth & Death registration</option>
+                                    <option class = 'Others'>Birth & Death registration</option>                                    
                             </select>
                         </div>
                         <div class="form-group">
@@ -487,9 +489,9 @@
                             <label for="type3" class = 'bmh-orange-txt font-weight-bold'>Feedback Type</label>
                             <select class="form-control" id="type3" name="type3">
                             <option class = 'Select-type'>Select Feedback Type</option>
-                            <option>Compliment</option>
-                            <option>Complaint</option>
+                            <option>Compliment</option>                            
                             <option>Suggestion</option>
+                            <option>Complaint</option>
                             </select>
                         </div>
                         <div class="form-group">
@@ -505,7 +507,7 @@
                                     <option class = 'Discharge'>Discharge</option>
                                     <option class = 'Doctors'>Doctors</option>
                                     <option class = 'ED'>ED</option>
-                                    <option class = 'EEG, ENMG, Echo'>EEG, ENMG, Echo</option>
+                                    <option class = 'ESI-ECHS'>ESI-ECHS</option>
                                     <option class = 'Housekeeping'>Housekeeping</option>
                                     <option class = 'Insurance'>Insurance desk</option>
                                     <option class = 'Lab'>Lab</option>
@@ -548,8 +550,8 @@
                                     <option class = 'ED'>Care and concern</option>
                                     <option class = 'ED'>Communication</option>
                                     <option class = 'ED'>Delay in services</option>
-                                    <option class = 'EEG, ENMG, Echo'>Delay in services</option>
-                                    <option class = 'EEG, ENMG, Echo'>Staff behaviour</option>
+                                    <option class = 'ESI-ECHS'>Delay in services</option>
+                                    <option class = 'ESI-ECHS'>Staff behaviour</option>
                                     <option class = 'Housekeeping'>Room cleanliness</option>
                                     <option class = 'Housekeeping'>Staff behaviour</option>
                                     <option class = 'Housekeeping'>Timely services</option>
@@ -563,6 +565,7 @@
                                     <option class = 'Paramedical'>Nutrition and dietetics</option>
                                     <option class = 'Paramedical'>Physiotherapy</option>
                                     <option class = 'Paramedical'>Speech therapy and audiology</option>
+                                    <option class = 'Paramedical'>EEG / ENMG / Echo</option>
                                     <option class = 'Pharmacy'>Delay in services</option>
                                     <option class = 'Pharmacy'>Medicine availability</option>
                                     <option class = 'Pharmacy'>Staff behaviour</option>
@@ -576,7 +579,7 @@
                                     <option class = 'Security'>Staff behaviour</option>
                                     <option class = 'Others'>General</option>
                                     <option class = 'Others'>Hospital Management</option>
-                                    <option class = 'Others'>Birth & Death registration</option>
+                                    <option class = 'Others'>Birth & Death registration</option>                                    
                             </select>
                         </div>
                         <div class="form-group">
