--- a/feedback.html
+++ b/feedback.html
@@ -267,7 +267,7 @@
                             <option class = 'Discharge'>Discharge</option>
                             <option class = 'Doctors'>Doctors</option>
                             <option class = 'ED'>ED</option>
-                            <option class = 'EEG, ENMG, Echo'>EEG, ENMG, Echo</option>
+                            <option class = 'ESI-ECHS'>ESI-ECHS</option>
                             <option class = 'Housekeeping'>Housekeeping</option>
                             <option class = 'Insurance'>Insurance desk</option>
                             <option class = 'Lab'>Lab</option>
@@ -310,8 +310,8 @@
                             <option class = 'ED'>Care and concern</option>
                             <option class = 'ED'>Communication</option>
                             <option class = 'ED'>Delay in services</option>
-                            <option class = 'EEG, ENMG, Echo'>Delay in services</option>
-                            <option class = 'EEG, ENMG, Echo'>Staff behaviour</option>
+                            <option class = 'ESI-ECHS'>Delay in services</option>
+                            <option class = 'ESI-ECHS'>Staff behaviour</option>
                             <option class = 'Housekeeping'>Room cleanliness</option>
                             <option class = 'Housekeeping'>Staff behaviour</option>
                             <option class = 'Housekeeping'>Timely services</option>
@@ -325,6 +325,7 @@
                             <option class = 'Paramedical'>Nutrition and dietetics</option>
                             <option class = 'Paramedical'>Physiotherapy</option>
                             <option class = 'Paramedical'>Speech therapy and audiology</option>
+                            <option class = 'Paramedical'>EEG / ENMG / Echo</option>
                             <option class = 'Pharmacy'>Delay in services</option>
                             <option class = 'Pharmacy'>Medicine availability</option>
                             <option class = 'Pharmacy'>Staff behaviour</option>
@@ -338,7 +339,7 @@
                             <option class = 'Security'>Staff behaviour</option>
                             <option class = 'Others'>General</option>
                             <option class = 'Others'>Hospital Management</option>
-                            <option class = 'Others'>Birth & Death registration</option>
+                            <option class = 'Others'>Birth & Death registration</option>                            
                             </select>
                         </div>
                         <div class="form-group">
@@ -376,7 +377,7 @@
                                     <option class = 'Discharge'>Discharge</option>
                                     <option class = 'Doctors'>Doctors</option>
                                     <option class = 'ED'>ED</option>
-                                    <option class = 'EEG, ENMG, Echo'>EEG, ENMG, Echo</option>
+                                    <option class = 'ESI-ECHS'>ESI-ECHS</option>
                                     <option class = 'Housekeeping'>Housekeeping</option>
                                     <option class = 'Insurance'>Insurance desk</option>
                                     <option class = 'Lab'>Lab</option>
@@ -419,8 +420,8 @@
                                     <option class = 'ED'>Care and concern</option>
                                     <option class = 'ED'>Communication</option>
                                     <option class = 'ED'>Delay in services</option>
-                                    <option class = 'EEG, ENMG, Echo'>Delay in services</option>
-                                    <option class = 'EEG, ENMG, Echo'>Staff behaviour</option>
+                                    <option class = 'ESI-ECHS'>Delay in services</option>
+                                    <option class = 'ESI-ECHS'>Staff behaviour</option>
                                     <option class = 'Housekeeping'>Room cleanliness</option>
                                     <option class = 'Housekeeping'>Staff behaviour</option>
                                     <option class = 'Housekeeping'>Timely services</option>
@@ -434,6 +435,7 @@
                                     <option class = 'Paramedical'>Nutrition and dietetics</option>
                                     <option class = 'Paramedical'>Physiotherapy</option>
                                     <option class = 'Paramedical'>Speech therapy and audiology</option>
+                                    <option class = 'Paramedical'>EEG / ENMG / Echo</option>
                                     <option class = 'Pharmacy'>Delay in services</option>
                                     <option class = 'Pharmacy'>Medicine availability</option>
                                     <option class = 'Pharmacy'>Staff behaviour</option>
@@ -447,7 +449,7 @@
                                     <option class = 'Security'>Staff behaviour</option>
                                     <option class = 'Others'>General</option>
                                     <option class = 'Others'>Hospital Management</option>
-                                    <option class = 'Others'>Birth & Death registration</option>
+                                    <option class = 'Others'>Birth & Death registration</option>                                    
                             </select>
                         </div>
                         <div class="form-group">
@@ -485,7 +487,7 @@
                                     <option class = 'Discharge'>Discharge</option>
                                     <option class = 'Doctors'>Doctors</option>
                                     <option class = 'ED'>ED</option>
-                                    <option class = 'EEG, ENMG, Echo'>EEG, ENMG, Echo</option>
+                                    <option class = 'ESI-ECHS'>ESI-ECHS</option>
                                     <option class = 'Housekeeping'>Housekeeping</option>
                                     <option class = 'Insurance'>Insurance desk</option>
                                     <option class = 'Lab'>Lab</option>
@@ -528,8 +530,8 @@
                                     <option class = 'ED'>Care and concern</option>
                                     <option class = 'ED'>Communication</option>
                                     <option class = 'ED'>Delay in services</option>
-                                    <option class = 'EEG, ENMG, Echo'>Delay in services</option>
-                                    <option class = 'EEG, ENMG, Echo'>Staff behaviour</option>
+                                    <option class = 'ESI-ECHS'>Delay in services</option>
+                                    <option class = 'ESI-ECHS'>Staff behaviour</option>
                                     <option class = 'Housekeeping'>Room cleanliness</option>
                                     <option class = 'Housekeeping'>Staff behaviour</option>
                                     <option class = 'Housekeeping'>Timely services</option>
@@ -543,6 +545,7 @@
                                     <option class = 'Paramedical'>Nutrition and dietetics</option>
                                     <option class = 'Paramedical'>Physiotherapy</option>
                                     <option class = 'Paramedical'>Speech therapy and audiology</option>
+                                    <option class = 'Paramedical'>EEG / ENMG / Echo</option>
                                     <option class = 'Pharmacy'>Delay in services</option>
                                     <option class = 'Pharmacy'>Medicine availability</option>
                                     <option class = 'Pharmacy'>Staff behaviour</option>
@@ -556,7 +559,7 @@
                                     <option class = 'Security'>Staff behaviour</option>
                                     <option class = 'Others'>General</option>
                                     <option class = 'Others'>Hospital Management</option>
-                                    <option class = 'Others'>Birth & Death registration</option>
+                                    <option class = 'Others'>Birth & Death registration</option>                                    
                             </select>
                         </div>
                         <div class="form-group">
